--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "json calculator,json sql in javascript",
   "main": "JCalculator.js",
   "scripts": {
-    "test": "dev"
+    "test": "dev",
+    "mocha": "istanbul cover ./node_modules/mocha/bin/_mocha"
   },
   "keywords": [
     "jcalculator",
@@ -23,5 +24,9 @@
     "gulp-livereload": "^3.8.1",
     "gulp-uglify": "^3.0.0",
     "gulp-webserver": "^0.9.1"
+  },
+  "devDependencies": {
+    "istanbul": "^0.4.5",
+    "mocha": "^4.0.1"
   }
 }
