--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
   ],
   "author": "Colin Chen",
   "license": "MIT",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "istanbul": "^0.4.5",
-    "mocha": "^4.0.1",
-    "should": "^13.1.3",
     "gulp": "^3.9.1",
     "gulp-eslint": "^4.0.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
-    "gulp-webserver": "^0.9.1"
+    "gulp-webserver": "^0.9.1",
+    "istanbul": "^0.4.5",
+    "mocha": "^4.0.1",
+    "should": "^13.1.3"
   }
 }
