add treeSearch and treePath, fix the bug of tree option children
修复tree选项的 chilren 配置项的bug.
新增 treeSearch, 返回符合条件的所有节点，出参为Array。
新增 treePath, 找到该根到某节点对应路径，出参为Array。

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jcalculator",
   "version": "1.2.1",
   "description": "json calculator for javascript",
-  "main": "JCalculator.js",
+  "main": "JCalculator.min.js",
   "scripts": {
     "test": "istanbul cover ./node_modules/mocha/bin/_mocha"
   },
